add swagger and build plugin to spring-boot-mvc