@@ -10,6 +10,10 @@
     </parent>
     <artifactId>spring-boot-mvc</artifactId>
 
+    <properties>
+        <daemon.id>spring-boot-mvc</daemon.id>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.zk</groupId>
@@ -38,5 +42,151 @@
             </exclusions>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>appassembler-maven-plugin</artifactId>
+                <version>2.0.0</version>
+                <configuration>
+                    <configurationDirectory>conf</configurationDirectory>
+                    <configurationSourceDirectory>src/main/resources</configurationSourceDirectory>
+                    <copyConfigurationDirectory>true</copyConfigurationDirectory>
+                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+                    <useWildcardClassPath>true</useWildcardClassPath>
+                    <repositoryLayout>flat</repositoryLayout>
+                    <repositoryName>lib</repositoryName>
+                    <binFileExtensions>
+                        <unix>.sh</unix>
+                    </binFileExtensions>
+                    <daemons>
+                        <daemon>
+                            <mainClass>com.zk.sbt.RunningApplication</mainClass>
+                            <jvmSettings>
+                                <extraArguments>
+                                    <!-- heap and gc -->
+                                    <extraArgument>-Xms2g</extraArgument>
+                                    <extraArgument>-Xmx4g</extraArgument>
+                                    <extraArgument>-XX:ReservedCodeCacheSize=240m</extraArgument>
+                                    <extraArgument>-XX:+UseConcMarkSweepGC</extraArgument>
+                                    <extraArgument>-XX:SoftRefLRUPolicyMSPerMB=50</extraArgument>
+                                    <extraArgument>-ea</extraArgument>
+                                    <extraArgument>-Dsun.io.useCanonCaches=false</extraArgument>
+                                    <extraArgument>-Djava.net.preferIPv4Stack=true</extraArgument>
+                                    <extraArgument>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005</extraArgument>
+                                </extraArguments>
+                            </jvmSettings>
+                            <generatorConfigurations>
+                                <generatorConfiguration>
+                                    <generator>jsw</generator>
+                                    <includes>
+                                        <include>linux-x86-32</include>
+                                        <include>linux-x86-64</include>
+                                        <include>windows-x86-32</include>
+                                        <include>windows-x86-64</include>
+                                        <include>macosx-universal-32</include>
+                                        <include>macosx-universal-64</include>
+                                    </includes>
+                                    <configuration>
+                                        <property>
+                                            <name>configuration.directory.in.classpath.first</name>
+                                            <value>conf</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.logfile</name>
+                                            <value>logs/${daemon.id}.log</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.console.format</name>
+                                            <value>PTM</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.logfile.format</name>
+                                            <value>PTM</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.logfile.maxsize</name>
+                                            <value>10m</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.logfile.maxfiles</name>
+                                            <value>5</value>
+                                        </property>
+                                    </configuration>
+                                </generatorConfiguration>
+                            </generatorConfigurations>
+                            <platforms>
+                                <platform>jsw</platform>
+                            </platforms>
+                            <id>${daemon.id}</id>
+                        </daemon>
+                    </daemons>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>build-deploy-dir</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>generate-daemons</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.5.4</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <finalName>${daemon.id}</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <descriptors>
+                        <descriptor>src/main/resources/assembly.xml</descriptor>
+                    </descriptors>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>com.github.kongchen</groupId>
+                <artifactId>swagger-maven-plugin</artifactId>
+                <version>3.1.4</version>
+                <configuration>
+                    <apiSources>
+                        <apiSource>
+                            <springmvc>true</springmvc>
+                            <locations>com.zk.sbt.controller</locations>
+                            <schemes>http,https</schemes>
+                            <host>localhost</host>
+                            <basePath>/</basePath>
+                            <info>
+                                <title>${daemon.id} api</title>
+                                <version>1.0</version>
+                                <description>${daemon.id} api rest doc</description>
+                            </info>
+                            <templatePath>${basedir}/templates/strapdown.html.hbs</templatePath>
+                            <outputPath>generated/${daemon.id}/document.html</outputPath>
+                            <swaggerDirectory>generated/${daemon.id}/swagger-ui</swaggerDirectory>
+                        </apiSource>
+                    </apiSources>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
